[package]
name = "zurl"
version = "0.1.3"
edition = "2021"
description = "Because simplicity matters, even in APIs"
readme = "README.md"
repository = "https://github.com/Muhammad-Owais-Warsi/zurl"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
colored = "2.0.0"
prettytable = "0.10.0"
figlet-rs = "0.1.5"
